[package]
name = "castle-uns-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_codegen = "0.4.4"
http = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
diesel = { version = "2.1.0", features = ["postgres"] }